--- a/index.html
+++ b/index.html
@@ -2,9 +2,19 @@
 <html>
   <head>
     <title>College Bus Tracker</title>
+    <link rel=""stylesheetz" href="style.css" />
   </head>
   <body>
+    <header>
     <h1>Welcome to the College Bus Tracker</h1>
+</header>
+<main>
     <p>This page will soon show the real-time location of your bus</p>
+    <button>Track Bus</button>
+    <script src="script.js"></script>
+</main>
+<footer>
+    <p>2025 College Bus Tracker</p>
+</footer>
   </body>
 </html>
